# heavyswarm-due-diligence-

./: .env.example  .env.production  .gitignore  DEFERRED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FINAL_INTEGRATION_REPORT.md  FINAL_STATUS.md  GIT_PUSH_INSTRUCTIONS.md  GROK_INTEGRATION_SUMMARY.md  INTEGRATION_REPORT.md  MILESTONE3_PLAN.md  MILESTONE3_REPORT.md  MILESTONE3_SUMMARY.md  MILESTONE_1_REPORT.md  MILESTONE_2_REPORT.md  OPERATIONAL_STATUS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  QUALITY_GATE_REPORT.md  README.md  RUNBOOK.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
config/: agents.yaml  grafana-dashboard.json  prometheus.yml
config/nginx/: nginx.conf
config/redis/: redis.conf
docs/: API_SPEC.md  ARCHITECTURE.md  GROK_INTEGRATION.md  HANDOFF.md  PRD.md  RISKS.md  ROADMAP.md  SECURITY.md  webhooks.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_checkpoints_and_archive.py  002_webhook_deliveries.py
prompts/v1.0.0/: registry.json
prompts/v1.0.0/financial_analyst/: comps_analysis.txt  dcf_model.txt  precedent_transactions.txt  system.txt
prompts/v1.0.0/qualityguardian/: quality_review.txt  system.txt
prompts/v1.0.0/question_generator/: data_requirements.txt  decompose.txt  success_criteria.txt  system.txt
prompts/v1.0.0/researcher/: competitor_prompt.txt  financial_prompt.txt  market_prompt.txt  news_prompt.txt  system.txt
prompts/v1.0.0/risk_analyst/: risk_matrix.txt  stress_test.txt  system.txt
prompts/v1.0.0/strategist/: devils_advocate.txt  scenario_builder.txt  system.txt
prompts/v1.0.0/verifier/: bias_detection.txt  confidence_scoring.txt  fact_check.txt  system.txt
prompts/v1.0.0/writer/: executive_summary.txt  memo_structure.txt  memo_template.txt  system.txt  trading_signal.txt
scripts/: backup.sh  deploy.sh  rotate_jwt_secret.py  verify-deployment.sh
src/heavyswarm/: __init__.py
src/heavyswarm/agents/: __init__.py  financial_analyst.py  quality_guardian.py  question_generator.py  researcher.py  risk_analyst.py  strategist.py  verifier.py  writer.py
src/heavyswarm/api/: __init__.py  main.py
src/heavyswarm/api/routes/: __init__.py  diligence.py  health.py  webhooks.py
src/heavyswarm/core/: __init__.py  agent_base.py  config.py  enums.py  orchestrator.py  orchestrator_factory.py  state.py
src/heavyswarm/services/: __init__.py  background_tasks.py  database.py  llm_client.py  metrics.py  prompt_loader.py  state_manager.py  verification.py  webhook_service.py
src/heavyswarm/services/data_sources/: __init__.py  alpha_vantage.py  base.py  news_api.py  sec_edgar.py
src/heavyswarm/utils/: __init__.py  logger.py  prompt_loader.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_data_sources.py  test_e2e_diligence.py  test_verification.py
tests/load/: locustfile.py
tests/unit/: __init__.py  test_agents.py  test_config.py  test_data_sources.py  test_grok_integration.py  test_llm_client.py  test_orchestrator.py  test_prompt_loader.py  test_state.py  test_webhooks.py
