[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heavyswarm-due-diligence"
version = "1.0.0"
description = "HeavySwarm Investment Due Diligence Engine - 7-agent multi-phase analysis system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HeavySwarm Team", email = "team@heavyswarm.io"}
]
keywords = ["investment", "due-diligence", "ai", "agents", "trading", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    
    # Database & Cache
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    
    # LLM Clients
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    
    # HTTP & API
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.3.0",
    
    # Data Processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
    
    # Validation & Parsing
    "jsonschema>=4.22.0",
    "email-validator>=2.1.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
    
    # Monitoring & Logging
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    
    # Circuit Breaker & Resilience
    "pybreaker>=1.2.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "respx>=0.21.0",
    
    # Linting & Formatting
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    
    # Debugging
    "ipdb>=0.13.0",
    "rich>=13.7.0",
]

[project.scripts]
heavyswarm = "heavyswarm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/heavyswarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/heavyswarm --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
source = ["src/heavyswarm"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
